--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.echessa.spplayer"
+        applicationId "com.bitzend.tuksosc"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
